2003-12-15  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/Makefile.am: -A- added melody board by Jose JORGE
	* boards/melody/.cvsignore: -A-
	* boards/melody/background.jpg: -A-
	* boards/melody/cursor.png: -A-
	* boards/melody/son1.png: -A-
	* boards/melody/son2.png: -A-
	* boards/melody/son3.png: -A-
	* boards/melody/son4.png: -A-
	* boards/sounds/melody/son1.ogg: -A-
	* boards/sounds/melody/son2.ogg: -A-
	* boards/sounds/melody/son3.ogg: -A-
	* boards/sounds/melody/son4.ogg: -A-
	* po/POTFILES.in: -A-
	* src/boards/py-mod-utils.c: (py_gcompris_set_image_focus): cleanup, removed traces
	* src/boards/python/Makefile.am: -A-
	* src/boards/python/melody.py: -A-

2003-12-11  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/bar.c: (gcompris_bar_set_repeat_icon),
	(gcompris_bar_set): implemented the possibility to specify a repeat icon (not tested)
	* src/gcompris/gcompris.h:  implemented the possibility to specify a repeat icon
	* src/gcompris/properties.c: fixed comment that was hiding a func
	* src/gcompris/soundutil.h: added stdio.h

2003-12-09  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/redraw.xml.in: added documentation
	* boards/skins/default/gcompris-shapebg.jpg: fixed 1 missing pixel border
	* boards/traffic/TrafficData: removed and replaced by traffic.h
	* configure.in: replaced the dependancy of gcompris from gnome to gtk
	marked to release 5.0
	* docs/fr/gcompris.texi: fixed doc nodes
	* gcompris.spec.in: fixed for info file distribution. better use of % directives
	* po/POTFILES.in: added redraw.py
	* src/boards/Makefile.am: added trafic.h
	* src/boards/advanced_colors.c: (init_xml), (read_xml_file): gtk port
	* src/boards/chess.c: (start_board), (chess_create_item),
	(start_child): fixed error message and process to use GNUCHESS env var
	* src/boards/clickgame.c: (load_random_pixmap): use g_file_test instead of g_file_exists
	* src/boards/imageid.c: (init_xml), (read_xml_file): use g_file_test instead of g_file_exists