@@ -1,3 +1,7 @@
+2003-12-16  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* doc/C/python.xml: updated sounds packages doc.
+
 2003-12-15  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* boards/Makefile.am: -A- added melody board by Jose JORGE
